--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@headlessui/react": "^1.7.0",
     "@shopify/hydrogen": "^1.4.3",
     "clsx": "^1.1.1",
+    "mongoose": "^6.5.0",
     "graphql-tag": "^2.12.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
