--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@shopify/hydrogen": "^1.4.3",
     "clsx": "^1.1.1",
     "mongoose": "^6.5.0",
+    "react-datepicker": "^4.8.0",
     "graphql-tag": "^2.12.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
